------------------------------------------------------------------------------

$Id$

------------------------------------------------------------------------------

Changes from version 1.0 to version 1.1:

* Sending host and application identification after connect().
* Changed library mechanism of the building process from libtool to ranlib to
  avoid duplicate compiling.

------------------------------------------------------------------------------